; ModuleID = '/home/carl/AnghaBench/systemd/src/core/extr_unit.c_unit_following.c'
source_filename = "/home/carl/AnghaBench/systemd/src/core/extr_unit.c_unit_following.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32* (i32*)* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @unit_following(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32*, align 8
  store i32* %0, i32** %3, align 8
  %4 = load i32*, i32** %3, align 8
  %5 = call i32 @assert(i32* %4)
  %6 = load i32*, i32** %3, align 8
  %7 = call %struct.TYPE_2__* @UNIT_VTABLE(i32* %6)
  %8 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %7, i32 0, i32 0
  %9 = load i32* (i32*)*, i32* (i32*)** %8, align 8
  %10 = icmp ne i32* (i32*)* %9, null
  br i1 %10, label %11, label %18

11:                                               ; preds = %1
  %12 = load i32*, i32** %3, align 8
  %13 = call %struct.TYPE_2__* @UNIT_VTABLE(i32* %12)
  %14 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %13, i32 0, i32 0
  %15 = load i32* (i32*)*, i32* (i32*)** %14, align 8
  %16 = load i32*, i32** %3, align 8
  %17 = call i32* %15(i32* %16)
  store i32* %17, i32** %2, align 8
  br label %19

18:                                               ; preds = %1
  store i32* null, i32** %2, align 8
  br label %19

19:                                               ; preds = %18, %11
  %20 = load i32*, i32** %2, align 8
  ret i32* %20
}

declare dso_local i32 @assert(i32*) #1

declare dso_local %struct.TYPE_2__* @UNIT_VTABLE(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
